--- a/Transformers_Comparison.ipynb
+++ b/Transformers_Comparison.ipynb
@@ -5,9 +5,10 @@
     "colab": {
       "name": "Transformers Comparison.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMHAqn8Jz1V4dmtpVQp+NRH",
+      "authorship_tag": "ABX9TyNkxtlRz6Z0EDd8odRCrb/1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23739,7 +23740,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-EypkluhsZrq",
-        "outputId": "5bfb9e93-18e4-49cd-a52e-c0c2cd36c179"
+        "outputId": "4799f732-2bf1-4d45-bb18-bd74260ea219"
       },
       "source": [
         "gpu_info = !nvidia-smi\n",
@@ -23750,12 +23751,12 @@
         "else:\n",
         "  print(gpu_info)"
       ],
-      "execution_count": 1,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Sun Apr 18 13:15:47 2021       \n",
+            "Sun Apr 18 18:09:37 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.67       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -23764,7 +23765,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   34C    P0    27W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
+            "| N/A   37C    P0    35W / 250W |  16019MiB / 16280MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -23773,7 +23774,6 @@
             "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
             "|        ID   ID                                                   Usage      |\n",
             "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
             "+-----------------------------------------------------------------------------+\n"
           ],
           "name": "stdout"
@@ -26686,10 +26686,10 @@
       "source": [
         "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
         "model_name = \"bert-base-cased\"\n",
-        "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+        "tokenizer =  model.tokenizer\n",
         "\n"
       ],
-      "execution_count": 83,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -26705,7 +26705,7 @@
         "    tokenizer)\n",
         "word_attributions = cls_explainer(\" I love flying on delta\")"
       ],
-      "execution_count": 90,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -26716,12 +26716,12 @@
           "height": 179
         },
         "id": "XLUohGVbG18L",
-        "outputId": "d09e197d-eb44-4b9b-d055-bd6f922bf9e4"
+        "outputId": "2b1e3eca-0997-49b1-d8f0-ad3be400ac67"
       },
       "source": [
         "cls_explainer.visualize(\"bert_viz.html\")"
       ],
-      "execution_count": 91,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "display_data",
@@ -26750,7 +26750,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 95
         }
       ]
     }
